--- a/一、Java基础知识/反射.md
+++ b/一、Java基础知识/反射.md
@@ -14,7 +14,7 @@
 
 ## 3、反射的具体实现
 
-三种获取Class方式：
+### 	a. 三种获取Class方式：
 
 ```java
 //1、通过对象调用getClass()方法获取（例如传过来一个Object类型的对象，而我不知道具体类型，用这种方法）
@@ -36,5 +36,62 @@ try {
 }
 ```
 
+```java
+//*****注：一个类在JVM中只会有一个Class实例
+System.out.println(c1.equals(c2)+c2.equals(c3)+c1.equals(c3)); //true true true
+```
+
+### 	b. API中Class方法：
+
+```java
+java.lang.Class; //类               
+java.lang.reflect.Constructor;//构造方法 
+java.lang.reflect.Field; //类的成员变量       
+java.lang.reflect.Method;//类的方法
+java.lang.reflect.Modifier;//访问权限
+
+String className = c1.getName(); //获取类的完整名字
+System.out.println("className "+className);
+Field[] fields = c1.getFields();//获取类的public类型的属性
+Field[] declaredFields = c1.getDeclaredFields();//获取类的所有属性，包括private声明的
+Method[] methods =c1.getMethods();//获取类和继承类的public方法
+Method[] declaredMethods = c1.getDeclaredMethods();//获得类的所有方法，包括private声明的
+Constructor[] constructors = c1.getConstructors();//获得类的public类型的构造器方法
+Object o = c1.newInstance(); //通过类的不带参数的构造方法创建这个类的一个对象
+  
+//反射机制可以打破封装性，导致了java对象的属性不安全
+//获取名为name的私有属性
+Field f1 = c1.getDeclaredField("name");
+System.out.println("f1 = [" + f1 + "]");
+f1.setAccessible(true); //启用和禁用访问安全检查的开关，值为true,则表示反射的对象在使用时应该取消java语言的访问检查
+Object obj = c1.newInstance();
+System.out.println(f1.get(obj)); //获取私有属性的值
+f1.set(obj,"BOB"); //私有属性赋值，使用反射机制可以打破封装性，导致了java对象的属性不安全
+System.out.println(f1.get(obj));
+
+//反射调用private修饰方法
+Object obj1 = c1.newInstance();
+boolean flag = obj1 instanceof Person;
+if(flag){
+	Method method = c1.getDeclaredMethod("say");
+	method.setAccessible(true); //如果是private修饰，不加这行报错
+	method.invoke(obj1);
+}
+```
 
 
+
+## 4、反射的应用场景
+
+- 逆向代码 ，例如反编译
+- 与注解相结合的框架 例如Retrofit
+- 单纯的反射机制应用框架 例如EventBus 2.x
+- 动态生成类框架 例如Gson
+
+
+
+## 5、反射的优缺点
+
+优点：运行期类型的判断，动态类加载，动态代理使用反射
+
+缺点：性能是一个问题，反射相当于一系列解释操作，通知jvm要做的事情，性能比直接java代码要慢
