--- a/一、Java基础知识/接口抽象类.md
+++ b/一、Java基础知识/接口抽象类.md
@@ -1,2 +1,60 @@
 # 三、接口/抽象类
 
+## 1、抽象类Abstract
+
+  如果一个类中没有包含足够的信息来描绘一个具体的对象，这样的类就是抽象类。一个类只能继承一个抽象类，而一个类却可以实现多个接口。抽象类不能被实例化对象。如果一个类包含抽象方法，那么该类必须是抽象类，任何子类必须重写父类的抽象方法
+
+  a)抽象类不能被实例化，实例化编译无法通过
+
+  b)抽象类中不一定包含抽象方法，但是有抽象方法的类必定是抽象类
+
+  c)抽象类中的抽象方法只是声明，没有方法体
+
+  d)构造方法、类方法（用static修饰的方法）不能
+
+  e)抽象类的子类必须给出抽象类中的抽象方法的具体实现，除非子类也是抽象类
+
+
+
+## 2、接口Interface
+
+  是一个抽象类型，是抽象方法的集合。接口无法被实例化，但可以被实现，一个类实现接口的类，必须实现接口的所有方法。
+
+**接口与类的区别：**
+
+  接口不能用于实例化对象
+
+  接口没有构造方法
+
+  接口中所有的方法必须是抽象方法
+
+  接口不能包含成员变量，除了static和final变量
+
+  接口不是被类继承，而是被类实现
+
+  接口支持多继承
+
+**接口特性：**
+
+  接口中的方法会被隐式的指定为public abstract(只能是public abstract，其他修饰符都会报错)
+
+  接口中可以含有变量，变量会被隐式指定为public static final
+
+  接口中的方法是不能在接口中实现的，只能由实现接口的类来实现。
+
+
+
+## 3、接口和抽象类的区别
+
+| 区别         | 抽象类                                   | 接口                               |
+| ------------ | ---------------------------------------- | ---------------------------------- |
+| 定义         | 包含一个抽象方法的类                     | 抽象方法和全局常量的集合           |
+| 组成         | 构造方法、抽象方法、普通方法、常量、变量 | 常量、抽象方法                     |
+| 使用         | 子类继承抽象类（extends)                 | 子类实现接口（implements)          |
+| 关系         | 抽象类可以实现多个接口                   | 接口不能继承抽象类，但允许继承接口 |
+| 常用设计模式 | 模板设计                                 | 工厂设计、代理设计                 |
+| 对象         | 都通过对象的多态性产生实例化对象         | 都通过对象的多态性产生实例化对象   |
+| 局限         | 单继承，只能有一个父类                   | 没有此局限                         |
+
+​		
+
