内部类学习  20191127 LL

--- a/一、Java基础知识/内部类.md
+++ b/一、Java基础知识/内部类.md
@@ -1,2 +1,53 @@
 # 四、内部类
 
+可以将一个类定义在另一个类里面或者一个方法里面，这样的类成为内部类。
+
+## 1、成员内部类
+
+​		成员内部类是最普通的内部类，它的定义位于另一个类的内部
+
+```java
+//创建成员内部类对象
+Circle c = new Circle(); //创建外部类对象
+//外部类.内部类 变量名 = 外部类对象.new 成员内部类名()
+Circle.Draw draw = c.new Draw(); 
+```
+
+
+
+## 2、局部内部类
+
+​		局部内部类是定义在一个方法或者一个作用域里面的类，它和成员内部类的区别在于局部内部类的访问仅限于方法内或者该作用域内。
+
+```java
+//内部类不能被public、private、static修饰
+//在外部类中不能创建内部类的实例
+//创建内部类的实例只能在包含他的方法中
+//内部类访问包含他的方法中的变量必须有final修饰
+//外部类中不能访问局部内部类，只能在方法中访问局部内部类，且访问必须在内部类定义之后
+//内部类和外部类有同名变量和方法名时，需要通过Outer.this方式来访问外部类成员变量或方法
+```
+
+
+
+## 3、匿名内部类
+
+​         使用匿名内部类必须要继承一个父类或者实现一个接口，没有class关键字。匿名内部类没有名字（仅能被使用一次）。匿名内部类不能是抽象类。
+
+```java
+//使用匿名内部类时，我们必须继承一个类或者实现一个接口。
+//匿名内部类中不能存在任何的静态成员变量和静态方法
+//匿名内部类中不能定义构造函数的
+//匿名内部类不能是抽象的
+
+//创建
+new 父类构造器(参数列表) | 实现接口(){
+    //匿名内部类的类体部分
+}
+```
+
+
+
+## 4、静态内部类
+
+​			静态内部类也是定义在另一个类里面的类，只不过在类的前面多了一个关键字static。静态内部类是不需要依赖于外部类的，，不能使用外部类的非static成员变量或者方法
