--- a/一、Java基础知识/异常.md
+++ b/一、Java基础知识/异常.md
@@ -1,2 +1,43 @@
 # 五、异常
 
+三种类型的异常：
+
+检查性异常：最具有代表性的检查性异常是用户错误或问题引起的异常。
+
+运行时异常：在编译时被忽略
+
+错误：错误不是异常，例如当栈溢出，一个错误就发生了。
+
+
+
+## 1、Exception类的层次
+
+![image-20191128101606681](C:\Users\l\AppData\Roaming\Typora\typora-user-images\image-20191128101606681.png)
+
+```tex
+Throwable类有Exception类是子类和Error子类
+所有的异常类是从java.lang.Exception类继承的子类
+java程序通常不捕获错误，错误一般发生在严重故障时，它们在java程序处理的范畴之外。
+Error用来指示运行时环境发生的错误
+```
+
+## 2、java的非检查性异常：
+
+![image-20191128093240140](C:\Users\l\AppData\Roaming\Typora\typora-user-images\image-20191128093240140.png)
+
+## 3、java定义在java.lang包中的检查性异常类：![image-20191128093402294](C:\Users\l\AppData\Roaming\Typora\typora-user-images\image-20191128093402294.png)
+
+
+
+## 4、声明自定义异常：
+
+所有异常都必须是Throwable的子类
+
+如果希望写一个检查性异常类，则需要继承Exception类
+
+如果你想写一个运行时异常类，那么需要继承RuntimeException类
+
+
+
+
+
