关键字学习  200191128  LL

--- a/一、Java基础知识/关键字.md
+++ b/一、Java基础知识/关键字.md
@@ -1,15 +1,111 @@
 # 七、关键字
 
-static
+## 1、访问控制
 
-final
+| 访问控制  |                        |
+| --------- | ---------------------- |
+| private   | 可应用于类、方法、变量 |
+| protected | 可应用于类、方法、变量 |
+| public    | 可应用于类、方法、变量 |
 
-Iterator
 
-Iterable
 
-Comparable
+## 2、类、方法、变量修饰符
 
-Comparable
+| 类、方法、变量修饰符 |                                                              |
+| -------------------- | ------------------------------------------------------------ |
+| abstract             | 声明抽象类，可修饰类或方法                                   |
+| class                | 声明新的类                                                   |
+| extends              | 继承某个类                                                   |
+| implements           | 实现接口                                                     |
+| interface            | 声明接口                                                     |
+| native               | 本地，可应用于方法，以指示该方法是用java以外的语言实现的     |
+| new                  | 创建新的类实例                                               |
+| final                | 可用于类，表示不能扩展该类（不能有子类）。用于方法，表示子类中不能重写此方法，一个类不能同时是abstract又是final。 |
+| static               | 可用于内部类、方法、字段。类的成员变量，在类的所有实例中只存在一次 |
+| strictfp             | 精确浮点，可用于声明一个类、接口或者方法，则java编译器以及运行环境会完全依照浮点规范执行（不允许接口中的方法以及构造函数声明strictfp关键字） |
+| synchronized         | 可应用于方法、语句块，并为一次只应由一个线程执行的关键代码段提供保护 |
+| transient            | 可应用于类的成员变量，以便指出该成员变量不应该在包含它的类实例已序列化时被序列化（一个域不是该对象串行化的一部分） |
+| volatitle            | 表示可以被多个线程异步修改的成员变量。                       |
 
-Comparator
+
+
+## 3、程序控制
+
+| 程序控制   |      |
+| ---------- | ---- |
+| break      |      |
+| continue   |      |
+| return     |      |
+| do         |      |
+| while      |      |
+| if         |      |
+| else       |      |
+| for        |      |
+| instanceof |      |
+| switch     |      |
+| case       |      |
+| default    |      |
+
+
+
+## 4、异常处理
+
+| 异常处理 |      |
+| -------- | ---- |
+| try      |      |
+| catch    |      |
+| throw    |      |
+| throws   |      |
+
+
+
+## 5、包相关
+
+| 包相关  |      |
+| ------- | ---- |
+| import  |      |
+| package |      |
+
+
+
+6、基本类型
+
+| 基本类型 |      |
+| -------- | ---- |
+| boolean  |      |
+| char     |      |
+| byte     |      |
+| short    |      |
+| int      |      |
+| long     |      |
+| float    |      |
+| double   |      |
+| true     |      |
+| false    |      |
+| null     |      |
+
+
+
+7、变量引用
+
+| 变量引用 |      |
+| -------- | ---- |
+| super    |      |
+| this     |      |
+| void     |      |
+
+
+
+8、保留字
+
+| 保留字 |                                         |
+| ------ | --------------------------------------- |
+| goto   | goto使用会使程序的可读性降低            |
+| const  | 类型修饰符，使用const声明的对象不能更新 |
+
+
+
+
+
+https://www.cnblogs.com/AloneZ/p/java1.html
