--- a/学习计划.md
+++ b/学习计划.md
@@ -10,7 +10,7 @@
 
 ## 二、jvm相关内容
 
-● 运行时数据区、GC、类加载机制、双亲委派模型、内存溢出/泄露、Java内存模型、字节码、jdk工具、GC调优/jvm调优、Tomcat相关。
+● 运行时数据区、GC、jdk工具、类加载机制、双亲委派模型、Java内存模型、Tomcat相关。
 
 《深入理解Java虚拟机》
 
